--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
-    "@dcloudio/uni-ui": "^1.5.11",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.5.20",
@@ -76,6 +75,7 @@
     "@dcloudio/uni-automator": "3.0.0-4070620250821001",
     "@dcloudio/uni-cli-shared": "3.0.0-4070620250821001",
     "@dcloudio/uni-stacktracey": "3.0.0-4070620250821001",
+    "@dcloudio/uni-ui": "^1.5.11",
     "@dcloudio/uni-vue-devtools": "3.0.0-alpha-3080220230511001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4070620250821001",
     "@rushstack/eslint-patch": "^1.1.4",
@@ -93,6 +93,7 @@
     "miniprogram-api-typings": "^4.0.5",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
+    "sass-loader": "10.1.1",
     "typescript": "^5.1.6",
     "vite": "^5.2.8",
     "vue-tsc": "^1.8.8"
